--- a/geoBoundariesExample.ipynb
+++ b/geoBoundariesExample.ipynb
@@ -35,7 +35,8 @@
     "#then load in the shape file.\n",
     "dlPath = dlPath.replace(\"-all.zip\", \".geojson\")\n",
     "geoBoundary = requests.get(dlPath).json()\n",
-    "print(geoBoundary[\"features\"][1][\"geometry\"])"
+    "print(geoBoundary[\"features\"][1][\"geometry\"])\n",
+    "print(\"chicken\")"
    ]
   },
   {
