--- a/geoBoundariesExample.ipynb
+++ b/geoBoundariesExample.ipynb
@@ -33,6 +33,7 @@
     "#You can swap .zip for .geojson for direct access to the geometry.\n",
     "#Alternatively, you can skip this, download the *.zip, extract it locally,\n",
     "#then load in the shape file.\n",
+    "#Dan is writing something.\n",
     "dlPath = dlPath.replace(\"-all.zip\", \".geojson\")\n",
     "geoBoundary = requests.get(dlPath).json()\n",
     "print(geoBoundary[\"features\"][1][\"geometry\"])\n",
